--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>hello, world</h1>
-<p>Call me Benjamin.</p>
+<a href="about.html">About this project</a>
 <p>Call me Benjamin.</p>
 <img src="images/breaching_whale.jpg">
 </body>
